--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "^4.1.0"
   },
   "dependencies": {
-    "puppeteer": "^24.27.0"
+    "puppeteer": "^24.27.0",
+    "serve-handler": "^6.1.5"
   }
 }
