--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ELEVENTY_ENV=development eleventy --serve",
     "prod": "ELEVENTY_ENV=production eleventy --serve",
+    "build": "ELEVENTY_ENV=production eleventy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
