--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
   "type": "commonjs",
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "js-yaml": "^4.1.0"
-  },
-  "dependencies": {
+    "js-yaml": "^4.1.0",
     "puppeteer": "^24.27.0",
     "serve-handler": "^6.1.5"
-  }
+  },
+  "dependencies": {}
 }
