--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  resume-dev:
+  dev:
     image: project-resume:latest
     build: .
     working_dir: /app
@@ -12,11 +12,17 @@ services:
       - CHOKIDAR_INTERVAL=200
     ports:
       - "127.0.0.1:8090:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:8080', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))\""]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 20s
     cap_add:
       - SYS_ADMIN
     command: >
       sh -lc "npm install && npm run dev"
-  resume-prod:
+  prod:
     image: project-resume:latest
     build: .
     working_dir: /app
@@ -29,6 +35,12 @@ services:
       - CHOKIDAR_INTERVAL=200
     ports:
       - "127.0.0.1:8091:8080"
+    healthcheck:
+      test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:8080', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))\""]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 20s
     cap_add:
       - SYS_ADMIN
     command: >
