--- a/compose.yml
+++ b/compose.yml
@@ -11,7 +11,9 @@ services:
       - CHOKIDAR_USEPOLLING=1
       - CHOKIDAR_INTERVAL=200
     ports:
-      - "127.0.0.1:8090:8080"
+      - "127.0.0.1:8080:8080"
+    expose:
+      - "8080"
     healthcheck:
       test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:8080', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))\""]
       interval: 10s
@@ -34,7 +36,9 @@ services:
       - CHOKIDAR_USEPOLLING=1
       - CHOKIDAR_INTERVAL=200
     ports:
-      - "127.0.0.1:8091:8080"
+      - "127.0.0.1:8090:8080"
+    expose:
+      - "8080"
     healthcheck:
       test: ["CMD-SHELL", "node -e \"require('http').get('http://localhost:8080', r => process.exit(r.statusCode === 200 ? 0 : 1)).on('error', () => process.exit(1))\""]
       interval: 10s
